{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "e4d562dd-5794-91ce-6cc7-84459b86360d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-10-08T12:43:26.128-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/private-vpc-allow-ping",
            "log_config": [],
            "name": "private-vpc-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/private-vpc-allow-ping",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-08T12:43:26.127-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/private-vpc-allow-rdp",
            "log_config": [],
            "name": "private-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/private-vpc-allow-rdp",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-08T12:43:26.159-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/private-vpc-allow-ssh",
            "log_config": [],
            "name": "private-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/private-vpc-allow-ssh",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-10-08T11:55:49.982-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/public-vpc-allow-ping",
            "log_config": [],
            "name": "public-vpc-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/public-vpc-allow-ping",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-08T11:55:50.024-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/public-vpc-allow-rdp",
            "log_config": [],
            "name": "public-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/public-vpc-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-08T11:55:49.631-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/public-vpc-allow-ssh",
            "log_config": [],
            "name": "public-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/firewalls/public-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test-server-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/zones/us-east1-d/disks/public-test-server-linux-aaabd12e"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/zones/us-east1-d/instances/public-test-server-linux-aaabd12e",
            "instance_id": "6525489728851557784",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "UxuOyWjMWXs=",
            "metadata_startup_script": "sudo apt-get update;",
            "name": "public-test-server-linux-aaabd12e",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.75.82.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc",
                "network_ip": "10.1.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/regions/us-east1/subnetworks/public-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-04-7a24e9ff11da"
              }
            ],
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/zones/us-east1-d/instances/public-test-server-linux-aaabd12e",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-d"
          },
          "dependencies": [
            "google_compute_network.public-vpc",
            "google_compute_subnetwork.public-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test-server-linux-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/zones/us-east1-c/disks/private-test-server-linux-aaabd12e"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/zones/us-east1-c/instances/private-test-server-linux-aaabd12e",
            "instance_id": "8761978284774274416",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "UxuOyWjMWXs=",
            "metadata_startup_script": "sudo apt-get update;",
            "name": "private-test-server-linux-aaabd12e",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.119.253",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc",
                "network_ip": "10.1.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/regions/us-east1/subnetworks/private-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-04-7a24e9ff11da"
              }
            ],
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/zones/us-east1-c/instances/private-test-server-linux-aaabd12e",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_subnetwork.private-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "private-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc",
            "mtu": 0,
            "name": "private-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4153698995751369152",
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "public-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc",
            "mtu": 0,
            "name": "public-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7285992703121702597",
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-08T12:29:28.483-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/regions/us-east1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/private-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/regions/us-east1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-08T11:55:49.765-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/qwiklabs-gcp-04-7a24e9ff11da/regions/us-east1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/global/networks/public-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-04-7a24e9ff11da",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-7a24e9ff11da/regions/us-east1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    }
  ]
}